force-app/main/default/objects/Meeting_Notes__c/Meeting_Notes__c.object-meta.xml
<CustomObject>
    <description>TOOLKIT: An object to capture notes from ALL meetings.</description>
    <label>Meeting Notes</label>
    <nameField>
        <label>Meeting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meeting Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>