force-app/main/default/objects/Meeting_Notes__c/fields/Action_Items__c.field-meta.xml
<CustomField>
    <fullName>Action_Items__c</fullName>
    <description>Action Items captured during the meeting. These should be transferred to action items in the toolkit.</description>
    <label>Action Items</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>