force-app/main/default/objects/Meeting_Notes__c/fields/Agenda__c.field-meta.xml
<CustomField>
    <fullName>Agenda__c</fullName>
    <label>Agenda</label>
    <type>TextArea</type>
</CustomField>