force-app/main/default/objects/Meeting_Notes__c/fields/Attendees__c.field-meta.xml
<CustomField>
    <fullName>Attendees__c</fullName>
    <description>Names of everyone who attended the meeting.</description>
    <label>Attendees</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>