force-app/main/default/objects/Meeting_Notes__c/fields/Invitees__c.field-meta.xml
<CustomField>
    <fullName>Invitees__c</fullName>
    <label>Invitees</label>
    <type>TextArea</type>
</CustomField>