force-app/main/default/objects/Meeting_Notes__c/fields/Meeting_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Date_and_Time__c</fullName>
    <description>Date and Time of the Meeting</description>
    <label>Meeting Date and Time</label>
    <type>DateTime</type>
</CustomField>