force-app/main/default/objects/Meeting_Notes__c/fields/Meeting_Facilitator__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Facilitator__c</fullName>
    <description>First and Last Name of the Meeting Facilitator</description>
    <label>Meeting Facilitator</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>