force-app/main/default/objects/Meeting_Notes__c/fields/Meeting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Notes__c</fullName>
    <description>Detailed Meeting Notes</description>
    <label>Meeting Notes Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>