force-app/main/default/objects/Meeting_Notes__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Release to which the meeting is related.</description>
    <label>Release</label>
    <referenceTo>Release__c</referenceTo>
    <relationshipLabel>Meeting Notes</relationshipLabel>
    <relationshipName>Meeting_Notes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>